--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
