--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
+    "@solana/wallet-adapter-base": "^0.9.11",
+    "@solana/wallet-adapter-react": "^0.15.9",
+    "@solana/wallet-adapter-react-ui": "^0.9.12",
+    "@solana/wallet-adapter-wallets": "^0.18.0",
+    "@solana/web3.js": "^1.53.0",
     "next": "latest",
+    "next-pwa": "^5.5.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
