--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.53.0",
     "next": "latest",
     "next-pwa": "^5.5.5",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
