--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.4",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
