--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -21,7 +21,8 @@
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "rerousel": "^0.1.9"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
