--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -17,16 +17,16 @@
     "@solana/wallet-adapter-react-ui": "^0.9.12",
     "@solana/wallet-adapter-wallets": "^0.18.0",
     "@solana/web3.js": "^1.53.0",
-    "next": "latest",
+    "next": "12.0.7",
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rerousel": "^0.1.9"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
