added contexts to jsconf

--- a/apps/market/jsconfig.json
+++ b/apps/market/jsconfig.json
@@ -3,6 +3,7 @@
 		"baseUrl": "./",
 		"paths": {
 			"@includes/*": ["_includes/*"],
+			"@contexts/*": ["_contexts/*"],
 			"@layouts/*": ["_layouts/*"],
 			"@app/*": ["pages/_app.js"],
 		}
