--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -17,6 +17,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.12",
     "@solana/wallet-adapter-wallets": "^0.18.0",
     "@solana/web3.js": "^1.53.0",
+    "matrix-js-sdk": "^19.3.0",
     "next": "12.0.7",
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
