--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -17,10 +17,13 @@
     "@solana/wallet-adapter-react-ui": "^0.9.12",
     "@solana/wallet-adapter-wallets": "^0.18.0",
     "@solana/web3.js": "^1.53.0",
+    "eslint": "^8.23.0",
+    "file-loader": "^6.2.0",
     "matrix-js-sdk": "^19.3.0",
     "next": "12.0.7",
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
+    "olm": "https://packages.matrix.org/npm/olm/olm-3.1.4.tgz",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rerousel": "^0.1.9"
