--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.25.0",
-    "orbit-clients": "file:packages/orbit-clients"
+    "orbit-clients": "file:packages/orbit-clients",
+    "data-transfer-clients": "file:packages/data-transfer-clients",
+    "browser-clients": "file:packages/browser-clients"
+
   }
 }
