--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.12.tgz",
     "@reduxjs/toolkit": "^1.8.4",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
     "@solana/wallet-adapter-base": "^0.9.11",
@@ -23,10 +24,11 @@
     "next": "12.0.7",
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
-    "olm": "https://packages.matrix.org/npm/olm/olm-3.1.4.tgz",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rerousel": "^0.1.9"
+    "rerousel": "^0.1.9",
+    "sharp": "^0.30.7",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
