--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -19,15 +19,14 @@
     "@solana/web3.js": "^1.53.0",
     "eslint": "^8.23.0",
     "file-loader": "^6.2.0",
-    "matrix-js-sdk": "^19.3.0",
+    "matrix-js-sdk": "^19.4.0",
     "next": "12.0.7",
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rerousel": "^0.1.9",
-    "sharp": "^0.30.7",
-    "zlib": "^1.0.5"
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
