--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "turbo": "^1.4.3"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.10",
     "@project-serum/anchor": "^0.25.0",
-    "orbit-clients": "file:packages/orbit-clients",
+    "browser-clients": "file:packages/browser-clients",
     "data-transfer-clients": "file:packages/data-transfer-clients",
-    "browser-clients": "file:packages/browser-clients"
-
-  }
+    "orbit-clients": "file:packages/orbit-clients"
+  },
+  "bundleDependencies": [
+    "orbit-clients"
+  ]
 }
