Revert "Merge pull request #1 from OrbitEng/digital-product-funcs"
This reverts commit ed981209ab385e27ba6e14050b20d44b5ead8d67, reversing
changes made to c8b970abeeb5faf87e9e2aae080479caac3ef746.

--- a/apps/market/jsconfig.json
+++ b/apps/market/jsconfig.json
@@ -5,9 +5,8 @@
 			"@includes/*": ["_includes/*"],
 			"@contexts/*": ["_contexts/*"],
 			"@layouts/*": ["_layouts/*"],
-			"@functionalities/*": ["_functionalities/*"],
+			"@hooks/*": ["_hooks/*"],
 			"@app/*": ["pages/_app.js"],
-			"@hooks/*": ["_hooks/*"]
 		}
 	}
 }
