--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@heroicons/react": "^2.0.10",
     "@project-serum/anchor": "^0.25.0",
     "browser-clients": "file:packages/browser-clients",
-    "data-transfer-clients": "file:packages/data-transfer-clients",
-    "orbit-clients": "file:packages/orbit-clients"
+    "data-transfer-clients": "file:packages/data-transfer-clients"
   }
 }
