--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "@matrix-org/olm": "^3.2.12",
     "@reduxjs/toolkit": "^1.8.4",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
     "@solana/wallet-adapter-base": "^0.9.11",
