prod disp + fetching wrappers

--- a/apps/market/jsconfig.json
+++ b/apps/market/jsconfig.json
@@ -6,6 +6,7 @@
 			"@contexts/*": ["_contexts/*"],
 			"@layouts/*": ["_layouts/*"],
 			"@hooks/*": ["_hooks/*"],
+			"@functionalities/*": ["_functionalities/*"],
 			"@app/*": ["pages/_app.js"],
 		}
 	}
