--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -26,6 +26,7 @@
     "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-multi-carousel": "^2.8.2",
     "rerousel": "^0.1.9",
     "sharp": "^0.30.7"
