--- a/apps/market/.env.development
+++ b/apps/market/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_URL = "http://localhost:3000"
-NEXT_CLUSTER_NAME = "devnet"
+NEXT_PUBLIC_URL="http://localhost:3000"
+NEXT_PUBLIC_CLUSTER_NAME="devnet"
