--- a/apps/market/.env.production
+++ b/apps/market/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_URL = "https://orbitmarkets.com"
-NEXT_CLUSTER_NAME = "mainnet"
+NEXT_PUBLIC_URL="https://orbitmarkets.com"
+NEXT_PUBLIC_CLUSTER_NAME="mainnet"
