--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -24,6 +24,7 @@
     "next": "12.0.7",
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
+    "next-videos": "1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.2",
