--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.9.0-b8",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.10",
     "@matrix-org/olm": "^3.2.12",
