--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.10",
     "@matrix-org/olm": "^3.2.12",
+    "@pythnetwork/client": "^2.8.0",
     "@reduxjs/toolkit": "^1.8.4",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
     "@solana/wallet-adapter-base": "^0.9.11",
