--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-multi-carousel": "^2.8.2",
     "rerousel": "^0.1.9",
     "sharp": "^0.30.7"
