--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "prettier": "latest",
-    "turbo": "^1.4.3"
+    "turbo": "^1.4.3",
+    "next":"latest"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.10",
