--- a/.github/workflows/verceldeploy.yaml
+++ b/.github/workflows/verceldeploy.yaml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules:
+            recursive
+      - name: Git Submodules init
+          git submodule init --recursive
       - name: Install Vercel CLI
         run: npm install --global vercel@canary
       - name: Pull Vercel Environment Information
