--- a/.github/workflows/verceldeploy.yaml
+++ b/.github/workflows/verceldeploy.yaml
@@ -15,7 +15,7 @@ jobs:
           submodules:
             recursive
       - name: Git Submodules init
-        run: git submodule init --remote
+        run: git submodule init && git submodule update --remote
       - name: Install Vercel CLI
         run: npm install --global vercel@canary
       - name: Pull Vercel Environment Information
