--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -34,10 +34,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-multi-carousel": "^2.8.2",
     "rerousel": "^0.1.9",
-    "sharp": "^0.30.7",
-    "browser-clients": "*",
-    "data-transfer-clients": "*",
-    "orbit-clients": "*"
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
