--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -20,7 +20,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.12",
     "@solana/wallet-adapter-wallets": "^0.18.0",
     "@solana/web3.js": "^1.53.0",
+    "browser-clients": "*",
     "cookies-next": "^2.1.1",
+    "data-transfer-clients": "*",
     "eslint": "^8.23.0",
     "file-loader": "^6.2.0",
     "matrix-js-sdk": "^21.0.0",
@@ -28,16 +30,16 @@
     "next-pwa": "^5.5.5",
     "next-transpile-modules": "^9.0.0",
     "next-videos": "1.5.0",
+    "orbit-clients": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-multi-carousel": "^2.8.2",
+    "react-parallax-tilt": "^1.7.69",
+    "react-spring": "^9.5.5",
     "rerousel": "^0.1.9",
-    "sharp": "^0.30.7",
-    "browser-clients": "*",
-    "data-transfer-clients": "*",
-    "orbit-clients": "*"
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
