--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -37,6 +37,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-multi-carousel": "^2.8.2",
     "react-parallax-tilt": "^1.7.69",
+    "react-responsive-carousel": "^3.2.23",
     "react-spring": "^9.5.5",
     "rerousel": "^0.1.9",
     "sharp": "^0.30.7"
