--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.10",
     "@matrix-org/olm": "^3.2.13",
-    "@pythnetwork/client": "^2.8.0",
+    "@pythnetwork/client": "^2.11.0",
     "@reduxjs/toolkit": "^1.8.4",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
     "@solana/wallet-adapter-base": "^0.9.11",
@@ -31,6 +31,7 @@
     "next-transpile-modules": "^9.0.0",
     "next-videos": "1.5.0",
     "orbit-clients": "*",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.2",
