--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "next": "latest",
     "prettier": "latest",
-    "turbo": "^1.4.3",
-    "next":"latest"
+    "turbo": "^1.4.3"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.10",
-    "@project-serum/anchor": "^0.25.0"
+    "@project-serum/anchor": "^0.25.0",
+    "@pythnetwork/client": "^2.11.0",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/web3.js": "^1.73.0"
   }
 }
