--- a/packages/orbit-clients/package.json
+++ b/packages/orbit-clients/package.json
@@ -4,8 +4,5 @@
   "description": "",
   "main": "index.js",
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@project-serum/anchor": "^0.25.0"
-  }
+  "license": "ISC"
 }
