--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.10",
-    "@project-serum/anchor": "^0.26.0",
+    "@coral-xyz/anchor": "0.27.0",
     "@pythnetwork/client": "^2.11.0",
     "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.73.0"
