--- a/apps/market/package.json
+++ b/apps/market/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@bundlr-network/client": "^0.9.0-b8",
+    "@coral-xyz/anchor": "^0.27.0",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.10",
     "@matrix-org/olm": "^3.2.13",
